--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "react-hooks/exhaustive-deps": "off"
+    }
   },
   "browserslist": {
     "production": [
@@ -39,6 +42,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.23.3",
     "@reduxjs/toolkit": "^1.9.7",
     "react-router-dom": "^6.18.0",
     "tailwindcss": "^3.3.5"
